--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,9 @@ dependencies:
   cloud_firestore: ^5.5.0
   http: ^1.2.2
   flutter_svg: ^2.0.16
+  mailer: ^6.2.0
+  geolocator: ^13.0.2
+  geocoding: ^3.0.0
 
 dev_dependencies:
   flutter_test:
